--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://gumoco.nl/"
+baseurl = "http://www.gumoco.nl/"
 languageCode = "en-US"
 title = "Gumoco - Bram van Dartel - IT Consultancy"
 # Enable comments by entering your Disqus shortname
