--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
   only: master
 git:
   submodules: false
-language: go
-go: 1.8.3
-script: bash ./deploy.sh
-install: go get github.com/spf13/hugo
+install:
+  - rm -rf public || exit 0
+  - wget `curl -s https://api.github.com/repositories/11180687/releases/latest | jq --raw-output '.assets[6] | .browser_download_url'` -O /tmp/hugo.deb
+  - sudo dpkg -i /tmp/hugo.deb
