--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,5 @@ install:
   - rm -rf public || exit 0
   - wget `curl -s https://api.github.com/repositories/11180687/releases/latest | jq --raw-output '.assets[6] | .browser_download_url'` -O /tmp/hugo.deb
   - sudo dpkg -i /tmp/hugo.deb
+script:
+  - bash ./deploy.sh
