--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ env:
   - GIT_DEPLOY_DIR=public
   - GIT_DEPLOY_BRANCH=master
   - GIT_DEPLOY_USERNAME="Travis CI"
-  - GIT_DEPLOY_EMAIL="spam@rootrulez.com"
+  - GIT_DEPLOY_EMAIL="bram@rootrulez.com"
 branches:
   only: master
 git:
   submodules: false
 install:
   - rm -rf public || exit 0
-  - wget `curl -s https://api.github.com/repositories/11180687/releases/latest | jq --raw-output '.assets[6] | .browser_download_url'` -O /tmp/hugo.deb
+  - wget `curl -s https://api.github.com/repositories/11180687/releases/latest | jq --raw-output '.assets[7] | .browser_download_url'` -O /tmp/hugo.deb
   - sudo dpkg -i /tmp/hugo.deb
 script:
   - bash ./deploy.sh
