--- a/.gitmodules
+++ b/.gitmodules
@@ -895,3 +895,6 @@
 [submodule "hugo-theme-anubis"]
 	path = themes/hugo-theme-anubis
 	url = https://github.com/Mitrichius/hugo-theme-anubis.git
+[submodule "themes/themes/hugo-sustain"]
+	path = themes/themes/hugo-sustain
+	url = https://github.com/nurlansu/hugo-sustain.git
